crates/brom-macros/src/snapshots/brom_macros__entity__tests__snapshot_basic_struct.snap
---
source: crates/brom-macros/src/entity.rs
expression: expand_and_format(&input)
---
#[automatically_derived]
impl ::brom_core::EntitySchema for Post {
    fn table_name() -> &'static str {
        "post"
    }
    fn fields() -> Vec<::brom_core::FieldInfo> {
        use ::brom_core::{FieldInfo, FieldType, Constraint};
        vec![
            FieldInfo { name : "title".to_string(), field_type : FieldType::String,
            constraints : vec![], ui_widget : None, hidden : false, }, FieldInfo { name :
            "body".to_string(), field_type : FieldType::String, constraints : vec![],
            ui_widget : None, hidden : false, }, FieldInfo { name : "published"
            .to_string(), field_type : FieldType::Boolean, constraints : vec![],
            ui_widget : None, hidden : false, }
        ]
    }
    fn schema_info() -> ::brom_core::SchemaInfo {
        ::brom_core::SchemaInfo {
            table_name: Self::table_name().to_string(),
            fields: Self::fields(),
            auth_policy: ::brom_core::AuthPolicy::Public,
        }
    }
}
#[derive(Debug, Clone, ::serde::Serialize, ::serde::Deserialize, ::utoipa::ToSchema)]
pub struct PostPublic {
    pub title: String,
    pub body: String,
    pub published: bool,
}
impl From<Post> for PostPublic {
    fn from(item: Post) -> Self {
        Self {
            title: item.title,
            body: item.body,
            published: item.published,
        }
    }
}
#[automatically_derived]
pub mod post_admin_api {
    use super::*;
    use ::brom_server::axum::{
        extract::{State, Path},
        Json, http::StatusCode,
    };
    use ::brom_server::AppState;
    use ::brom_core::{Repository, Pagination};
    use ::brom_db::SqliteRepository;
    #[::brom_server::utoipa::path(
        get,
        path = "/admin/api/entities/post",
        responses((status = 200, description = "List all items", body = [Post])),
        tag = "Admin Post"
    )]
    pub async fn list_handler(
        state: State<AppState>,
    ) -> Result<Json<Vec<Post>>, ::brom_server::ServerError> {
        let repo = SqliteRepository::<Post>::new(state.db.clone());
        let items = repo.find_all(&Pagination::default())?;
        Ok(Json(items))
    }
    #[::brom_server::utoipa::path(
        get,
        path = "/admin/api/entities/post/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (status = 200, description = "Get item by ID", body = Post),
            (status = 404, description = "Not found")
        ),
        tag = "Admin Post"
    )]
    pub async fn get_handler(
        state: State<AppState>,
        id: Path<i64>,
    ) -> Result<Json<Post>, ::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<Post>::new(state.db.clone());
        let item = repo
            .find_by_id(id)?
            .ok_or(
                ::brom_server::ServerError::Core(::brom_core::Error::NotFound {
                    entity: "post",
                    id,
                }),
            )?;
        Ok(Json(item))
    }
    #[::brom_server::utoipa::path(
        post,
        path = "/admin/api/entities/post",
        request_body = Post,
        responses((status = 201, description = "Item created", body = Post)),
        tag = "Admin Post"
    )]
    pub async fn create_handler(
        state: State<AppState>,
        payload: Json<Post>,
    ) -> Result<Json<Post>, ::brom_server::ServerError> {
        let repo = SqliteRepository::<Post>::new(state.db.clone());
        let id = repo.create(&payload.0)?;
        let item = repo
            .find_by_id(id)?
            .ok_or(
                ::brom_server::ServerError::Core(::brom_core::Error::NotFound {
                    entity: "post",
                    id,
                }),
            )?;
        Ok(Json(item))
    }
    #[::brom_server::utoipa::path(
        put,
        path = "/admin/api/entities/post/{id}",
        params(("id" = i64, Path, description = "ID")),
        request_body = Post,
        responses(
            (status = 200, description = "Item updated", body = Post),
            (status = 404, description = "Not found")
        ),
        tag = "Admin Post"
    )]
    pub async fn update_handler(
        state: State<AppState>,
        id: Path<i64>,
        payload: Json<Post>,
    ) -> Result<Json<Post>, ::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<Post>::new(state.db.clone());
        repo.update(id, &payload.0)?;
        let item = repo
            .find_by_id(id)?
            .ok_or(
                ::brom_server::ServerError::Core(::brom_core::Error::NotFound {
                    entity: "post",
                    id,
                }),
            )?;
        Ok(Json(item))
    }
    #[::brom_server::utoipa::path(
        delete,
        path = "/admin/api/entities/post/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (status = 204, description = "Item deleted"),
            (status = 404, description = "Not found")
        ),
        tag = "Admin Post"
    )]
    pub async fn delete_handler(
        state: State<AppState>,
        id: Path<i64>,
    ) -> Result<StatusCode, ::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<Post>::new(state.db.clone());
        repo.delete(id)?;
        Ok(StatusCode::NO_CONTENT)
    }
}
#[automatically_derived]
pub mod post_public_api {
    use super::*;
    use ::brom_server::axum::{
        extract::{State, Path},
        Json,
    };
    use ::brom_server::AppState;
    use ::brom_core::{Repository, Pagination};
    use ::brom_db::SqliteRepository;
    use ::brom_server::{DataEnvelope, PaginatedResponse};
    #[::brom_server::utoipa::path(
        get,
        path = "/api/v1/entities/post",
        responses(
            (
                status = 200,
                description = "List all items",
                body = PaginatedResponse<PostPublic>
            )
        ),
        tag = "Public Post"
    )]
    pub async fn list_handler(
        state: ::brom_server::axum::extract::State<::brom_server::AppState>,
    ) -> Result<
        ::brom_server::axum::Json<::brom_server::PaginatedResponse<PostPublic>>,
        ::brom_server::ServerError,
    > {
        let repo = ::brom_db::SqliteRepository::<Post>::new(state.db.clone());
        let items = ::brom_core::Repository::find_all(
            &repo,
            &::brom_core::Pagination::default(),
        )?;
        let pub_items = items.into_iter().map(Into::into).collect();
        Ok(
            ::brom_server::axum::Json(
                ::brom_server::PaginatedResponse::new(pub_items, 0, 0, 1, 50),
            ),
        )
    }
    #[::brom_server::utoipa::path(
        get,
        path = "/api/v1/entities/post/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (
                status = 200,
                description = "Get item by ID",
                body = DataEnvelope<PostPublic>
            ),
            (status = 404, description = "Not found")
        ),
        tag = "Public Post"
    )]
    pub async fn get_handler(
        state: ::brom_server::axum::extract::State<::brom_server::AppState>,
        id: ::brom_server::axum::extract::Path<i64>,
    ) -> Result<
        ::brom_server::axum::Json<::brom_server::DataEnvelope<PostPublic>>,
        ::brom_server::ServerError,
    > {
        let id = id.0;
        let repo = ::brom_db::SqliteRepository::<Post>::new(state.db.clone());
        let item = ::brom_core::Repository::find_by_id(&repo, id)?
            .ok_or(
                ::brom_server::ServerError::Core(::brom_core::Error::NotFound {
                    entity: "post",
                    id,
                }),
            )?;
        Ok(::brom_server::axum::Json(::brom_server::DataEnvelope::new(item.into())))
    }
}
#[automatically_derived]
impl Post {
    pub fn admin_router() -> ::brom_server::axum::Router<::brom_server::AppState> {
        use ::brom_server::axum::routing::get;
        ::brom_server::axum::Router::<::brom_server::AppState>::new()
            .route(
                "/admin/api/entities/post",
                get(post_admin_api::list_handler).post(post_admin_api::create_handler),
            )
            .route(
                "/admin/api/entities/post/{id}",
                get(post_admin_api::get_handler)
                    .put(post_admin_api::update_handler)
                    .delete(post_admin_api::delete_handler),
            )
    }
    pub fn public_router() -> ::brom_server::axum::Router<::brom_server::AppState> {
        use ::brom_server::axum::routing::get;
        ::brom_server::axum::Router::<::brom_server::AppState>::new()
            .route("/api/v1/entities/post", get(post_public_api::list_handler))
            .route("/api/v1/entities/post/{id}", get(post_public_api::get_handler))
    }
}
#[automatically_derived]
#[allow(clippy::needless_for_each)]
mod post_openapi_inner {
    use super::*;
    use ::brom_server::utoipa;
    #[derive(utoipa::OpenApi)]
    #[openapi(
        paths(
            post_admin_api::list_handler,
            post_admin_api::get_handler,
            post_admin_api::create_handler,
            post_admin_api::update_handler,
            post_admin_api::delete_handler,
            post_public_api::list_handler,
            post_public_api::get_handler,
        ),
        components(schemas(Post))
    )]
    pub struct PostApi;
}
pub use post_openapi_inner::PostApi;
