crates/brom-macros/src/snapshots/brom_macros__entity__tests__snapshot_field_constraints.snap
---
source: crates/brom-macros/src/entity.rs
expression: expand_and_format(&input)
---
#[automatically_derived]
impl ::brom::__private::brom_core::EntitySchema for User {
    fn table_name() -> &'static str {
        "user"
    }
    fn fields() -> Vec<::brom::__private::brom_core::FieldInfo> {
        vec![
            ::brom::__private::brom_core::FieldInfo { name : "email".to_string(),
            field_type : ::brom::__private::brom_core::FieldType::String, constraints :
            vec![::brom::__private::brom_core::Constraint::Unique], ui_widget : None,
            hidden : false, }, ::brom::__private::brom_core::FieldInfo { name :
            "display_name".to_string(), field_type :
            ::brom::__private::brom_core::FieldType::String, constraints :
            vec![::brom::__private::brom_core::Constraint::NotNull,
            ::brom::__private::brom_core::Constraint::Default("Anonymous".to_string())],
            ui_widget : None, hidden : false, }, ::brom::__private::brom_core::FieldInfo
            { name : "password_hash".to_string(), field_type :
            ::brom::__private::brom_core::FieldType::String, constraints : vec![],
            ui_widget : None, hidden : true, }
        ]
    }
    fn schema_info() -> ::brom::__private::brom_core::SchemaInfo {
        ::brom::__private::brom_core::SchemaInfo {
            table_name: Self::table_name().to_string(),
            fields: Self::fields(),
            auth_policy: ::brom::__private::brom_core::AuthPolicy::Public,
        }
    }
}
mod __brom_hygiene_user {
    use super::*;
    use ::brom::__private::utoipa as utoipa;
    use ::brom::__private::serde as serde;
    #[derive(Debug, Clone, serde::Serialize, serde::Deserialize, utoipa::ToSchema)]
    pub struct UserPublic {
        pub email: String,
        pub display_name: String,
    }
    #[derive(Debug, Clone, serde::Serialize, serde::Deserialize, utoipa::ToSchema)]
    pub struct UserAdmin {
        pub email: String,
        pub display_name: String,
        pub password_hash: String,
    }
}
pub use __brom_hygiene_user::{UserPublic, UserAdmin};
impl From<User> for UserPublic {
    fn from(item: User) -> Self {
        Self {
            email: item.email,
            display_name: item.display_name,
        }
    }
}
impl From<User> for UserAdmin {
    fn from(item: User) -> Self {
        Self {
            email: item.email,
            display_name: item.display_name,
            password_hash: item.password_hash,
        }
    }
}
impl From<UserAdmin> for User {
    fn from(item: UserAdmin) -> Self {
        Self {
            email: item.email,
            display_name: item.display_name,
            password_hash: item.password_hash,
        }
    }
}
#[automatically_derived]
pub mod user_admin_api {
    use super::*;
    use ::brom::__private::brom_server::axum::{
        extract::{State, Path},
        Json, http::StatusCode,
    };
    use ::brom::__private::brom_server::AppState;
    use ::brom::__private::brom_core::{Repository, Pagination};
    use ::brom::__private::brom_db::SqliteRepository;
    use ::brom::__private::brom_server::RequireAdmin;
    use ::brom::__private::utoipa as utoipa;
    use ::brom::__private::brom_server::tracing as tracing;
    #[derive(::brom::__private::serde::Deserialize)]
    pub struct PaginationParams {
        pub page: Option<u64>,
        pub per_page: Option<u64>,
    }
    #[::brom::__private::utoipa::path(
        get,
        path = "/admin/api/entities/user",
        responses(
            (status = 200, description = "List all items", body = [super::UserAdmin])
        ),
        tag = "Admin User"
    )]
    pub async fn list_handler(
        _: RequireAdmin,
        state: State<AppState>,
        query: ::brom::__private::brom_server::axum::extract::Query<PaginationParams>,
    ) -> Result<
        Json<Vec<super::UserAdmin>>,
        ::brom::__private::brom_server::ServerError,
    > {
        let pagination = ::brom::__private::brom_core::Pagination::new(
            query.0.page.unwrap_or(1),
            query.0.per_page.unwrap_or(25),
        );
        let repo = SqliteRepository::<super::User>::new(state.db.clone());
        let items = ::brom::__private::brom_core::Repository::find_all(
            &repo,
            &pagination,
        )?;
        let out_items = items.into_iter().map(Into::into).collect();
        Ok(Json(out_items))
    }
    #[::brom::__private::utoipa::path(
        get,
        path = "/admin/api/entities/user/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (status = 200, description = "Get item by ID", body = super::UserAdmin),
            (status = 404, description = "Not found")
        ),
        tag = "Admin User"
    )]
    pub async fn get_handler(
        _: RequireAdmin,
        state: State<AppState>,
        id: Path<i64>,
    ) -> Result<Json<super::UserAdmin>, ::brom::__private::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<super::User>::new(state.db.clone());
        let item = ::brom::__private::brom_core::Repository::find_by_id(&repo, id)?
            .ok_or(::brom::__private::brom_core::Error::NotFound {
                entity: "user",
                id,
            })?;
        Ok(Json(item.into()))
    }
    #[::brom::__private::utoipa::path(
        post,
        path = "/admin/api/entities/user",
        responses((status = 201, description = "Item created", body = super::UserAdmin)),
        tag = "Admin User"
    )]
    pub async fn create_handler(
        _: RequireAdmin,
        state: State<AppState>,
        payload: Json<super::UserAdmin>,
    ) -> Result<Json<super::UserAdmin>, ::brom::__private::brom_server::ServerError> {
        let repo = SqliteRepository::<super::User>::new(state.db.clone());
        let id = repo.create(&payload.0.into())?;
        let item = repo
            .find_by_id(id)?
            .ok_or(::brom::__private::brom_core::Error::NotFound {
                entity: "user",
                id,
            })?;
        Ok(Json(item.into()))
    }
    #[::brom::__private::utoipa::path(
        put,
        path = "/admin/api/entities/user/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (status = 200, description = "Item updated", body = super::UserAdmin),
            (status = 404, description = "Not found")
        ),
        tag = "Admin User"
    )]
    pub async fn update_handler(
        _: RequireAdmin,
        state: State<AppState>,
        id: Path<i64>,
        payload: Json<super::UserAdmin>,
    ) -> Result<Json<super::UserAdmin>, ::brom::__private::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<super::User>::new(state.db.clone());
        repo.update(id, &payload.0.into())?;
        let item = repo
            .find_by_id(id)?
            .ok_or(::brom::__private::brom_core::Error::NotFound {
                entity: "user",
                id,
            })?;
        Ok(Json(item.into()))
    }
    #[::brom::__private::utoipa::path(
        delete,
        path = "/admin/api/entities/user/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (status = 204, description = "Item deleted"),
            (status = 404, description = "Not found")
        ),
        tag = "Admin User"
    )]
    pub async fn delete_handler(
        _: RequireAdmin,
        state: State<AppState>,
        id: Path<i64>,
    ) -> Result<StatusCode, ::brom::__private::brom_server::ServerError> {
        let id = id.0;
        let repo = SqliteRepository::<User>::new(state.db.clone());
        repo.delete(id)?;
        Ok(StatusCode::NO_CONTENT)
    }
}
#[automatically_derived]
pub mod user_public_api {
    use super::*;
    use ::brom::__private::brom_server::axum::{
        extract::{State, Path},
        Json,
    };
    use ::brom::__private::brom_server::AppState;
    use ::brom::__private::brom_core::{Repository, Pagination};
    use ::brom::__private::brom_db::SqliteRepository;
    use ::brom::__private::brom_server::{DataEnvelope, PaginatedResponse};
    #[derive(::brom::__private::serde::Deserialize)]
    pub struct PaginationParams {
        pub page: Option<u64>,
        pub per_page: Option<u64>,
    }
    use ::brom::__private::utoipa as utoipa;
    use ::brom::__private::brom_server::tracing as tracing;
    #[utoipa::path(
        get,
        path = "/api/v1/entities/user",
        responses(
            (
                status = 200,
                description = "List all items",
                body = PaginatedResponse<super::UserPublic>
            )
        ),
        tag = "Public User"
    )]
    pub async fn list_handler(
        state: ::brom::__private::brom_server::axum::extract::State<
            ::brom::__private::brom_server::AppState,
        >,
        query: ::brom::__private::brom_server::axum::extract::Query<PaginationParams>,
    ) -> Result<
        ::brom::__private::brom_server::axum::Json<
            ::brom::__private::brom_server::PaginatedResponse<super::UserPublic>,
        >,
        ::brom::__private::brom_server::ServerError,
    > {
        let pagination = ::brom::__private::brom_core::Pagination::new(
            query.0.page.unwrap_or(1),
            query.0.per_page.unwrap_or(25),
        );
        let repo = ::brom::__private::brom_db::SqliteRepository::<
            super::User,
        >::new(state.db.clone());
        let total_items = ::brom::__private::brom_core::Repository::count(&repo)?;
        let total_pages = (total_items + i64::from(pagination.per_page as i32) - 1)
            / i64::from(pagination.per_page as i32);
        let items = ::brom::__private::brom_core::Repository::find_all(
            &repo,
            &pagination,
        )?;
        let pub_items = items.into_iter().map(Into::into).collect();
        Ok(
            ::brom::__private::brom_server::axum::Json(
                ::brom::__private::brom_server::PaginatedResponse::new(
                    pub_items,
                    total_items,
                    total_pages,
                    pagination.page,
                    pagination.per_page,
                ),
            ),
        )
    }
    #[::brom::__private::utoipa::path(
        get,
        path = "/api/v1/entities/user/{id}",
        params(("id" = i64, Path, description = "ID")),
        responses(
            (
                status = 200,
                description = "Get item by ID",
                body = DataEnvelope<super::UserPublic>
            ),
            (status = 404, description = "Not found")
        ),
        tag = "Public User"
    )]
    pub async fn get_handler(
        state: ::brom::__private::brom_server::axum::extract::State<
            ::brom::__private::brom_server::AppState,
        >,
        id: ::brom::__private::brom_server::axum::extract::Path<i64>,
    ) -> Result<
        ::brom::__private::brom_server::axum::Json<
            ::brom::__private::brom_server::DataEnvelope<super::UserPublic>,
        >,
        ::brom::__private::brom_server::ServerError,
    > {
        let id = id.0;
        let repo = ::brom::__private::brom_db::SqliteRepository::<
            super::User,
        >::new(state.db.clone());
        let item = ::brom::__private::brom_core::Repository::find_by_id(&repo, id)?
            .ok_or(
                ::brom::__private::brom_server::ServerError::Core(::brom::__private::brom_core::Error::NotFound {
                    entity: "user",
                    id,
                }),
            )?;
        Ok(
            ::brom::__private::brom_server::axum::Json(
                ::brom::__private::brom_server::DataEnvelope::new(item.into()),
            ),
        )
    }
}
#[automatically_derived]
impl User {
    pub fn admin_router() -> ::brom::__private::brom_server::axum::Router<
        ::brom::__private::brom_server::AppState,
    > {
        use ::brom::__private::brom_server::axum::routing::get;
        ::brom::__private::brom_server::axum::Router::<
            ::brom::__private::brom_server::AppState,
        >::new()
            .route(
                "/admin/api/entities/user",
                get(user_admin_api::list_handler).post(user_admin_api::create_handler),
            )
            .route(
                "/admin/api/entities/user/{id}",
                get(user_admin_api::get_handler)
                    .put(user_admin_api::update_handler)
                    .delete(user_admin_api::delete_handler),
            )
    }
    pub fn public_router() -> ::brom::__private::brom_server::axum::Router<
        ::brom::__private::brom_server::AppState,
    > {
        use ::brom::__private::brom_server::axum::routing::get;
        ::brom::__private::brom_server::axum::Router::<
            ::brom::__private::brom_server::AppState,
        >::new()
            .route("/api/v1/entities/user", get(user_public_api::list_handler))
            .route("/api/v1/entities/user/{id}", get(user_public_api::get_handler))
    }
}
#[automatically_derived]
#[allow(clippy::needless_for_each)]
mod user_openapi_inner {
    use ::brom::__private::utoipa as utoipa;
    #[derive(utoipa::OpenApi)]
    #[openapi(
        paths(
            super::user_admin_api::list_handler,
            super::user_admin_api::get_handler,
            super::user_admin_api::create_handler,
            super::user_admin_api::update_handler,
            super::user_admin_api::delete_handler,
            super::user_public_api::list_handler,
            super::user_public_api::get_handler,
        ),
        components(schemas(super::UserAdmin, super::UserPublic))
    )]
    pub struct UserApi;
}
pub use user_openapi_inner::UserApi;
